# dw-ecommerce

./: .gitignore  Dockerfile  README.MD  docker-compose.yml  pyproject.toml
IaC/ETL/: model.sql
IaC/Infra/: redshift.tf  terraform.tfstate  terraform.tfstate.backup
data/: Dim_Cliente.csv  Dim_Localizacao.csv  Dim_Produto.csv  Dim_Tempo.csv  Fato_Vendas.csv
docs/: conceptual_model.md  dimensional_model.md  modelo_conceitual.md  modelo_dimensional.md  modelo_fisico.md  modelo_logico.md  phisical_model.md
include/metabase-data/metabase.db/: metabase.db.mv.db  metabase.db.trace.db
metabase-data/metabase.db/: metabase.db.mv.db  metabase.db.trace.db
src/: faker_datas.py
