[tool.poetry]
name = "ecommerce-dw"
version = "0.1.0"
description = ""
authors = ["Daniel Menna <danielribeiromenna@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.4"
faker = "^28.4.1"
ace-tools = "^0.0"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
